Added new providor

--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
         <p>10% off for new customers</p>
       </div>
     </section>
+
+        <section class="provider">
+          <h2>SimLocal Discount Codes</h2>
+          <div class="coupon">
+            <code>WELCOME10</code>
+            <p>10% off for new customers</p>
+          </div>
+        </section>
   </main>
 </body>
 
